--- a/views/about.html
+++ b/views/about.html
@@ -13,8 +13,9 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="/">Services</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="/reports">reports</a></li>
       </ul>
     </nav>
   </header>
